Fixed Profile pic image on Mobile
resized img

--- a/css/style.css
+++ b/css/style.css
@@ -101,6 +101,11 @@
 
 @media only screen and (min-device-width : 375px) and (max-device-width : 667px){
 	.main{
-		margin-left: 40%;
+		margin-left: 30%;
+	}
+
+	.profile-pic{
+		max-width: 70%;
+		max-height: 70%;
 	}
 }
